--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     </div>
                     <h3>جوجل كروم</h3>
                     <p>متوافق مع كروم 88+</p>
-                    <a href="#" class="btn">تنزيل للكروم</a>
+                    <a href="https://drive.google.com/drive/folders/1pPVCL8ciYe_jm9o464H3ap4Z5kvti46m?usp=sharing" class="btn">تنزيل للكروم</a>
                 </div>
                 <div class="browser-option">
                     <div class="browser-icon">
@@ -281,7 +281,7 @@
                     </div>
                     <h3>فايرفوكس</h3>
                     <p>متوافق مع فايرفوكس 86+</p>
-                    <a href="#" class="btn">تنزيل للفايرفوكس</a>
+                    <a href="https://drive.google.com/drive/folders/1pPVCL8ciYe_jm9o464H3ap4Z5kvti46m?usp=sharing" class="btn">تنزيل للفايرفوكس</a>
                 </div>
                 <div class="browser-option">
                     <div class="browser-icon">
@@ -289,7 +289,7 @@
                     </div>
                     <h3>مايكروسوفت إيدج</h3>
                     <p>متوافق مع إيدج 88+</p>
-                    <a href="#" class="btn">تنزيل للإيدج</a>
+                    <a href="https://drive.google.com/drive/folders/1pPVCL8ciYe_jm9o464H3ap4Z5kvti46m?usp=sharing" class="btn">تنزيل للإيدج</a>
                 </div>
             </div>
         </div>
